--- a/pages/page002/page002.html
+++ b/pages/page002/page002.html
@@ -17,9 +17,18 @@
         <div class="image-box"><img src="storage/img/Image right.png" alt="Image 2"></div>
     </section>
     <section class="gallery">
-        <div class="image-box"><img src="storage/img/1.png" alt="Image 1"></div>
-        <div class="image-box"><img src="storage/img/2.png" alt="Image 2"></div>
-        <div class="image-box"><img src="storage/img/3.png" alt="Image 1"></div>
+        <section class="box">
+            <h2>01</h2>
+            <div class="image-box"><img src="storage/img/1.png" alt="Image 1"></div>
+        </section>
+        <section class="box">
+            <h2>02</h2>
+            <div class="image-box"><img src="storage/img/2.png" alt="Image 2"></div>
+        </section>
+        <section class="box">
+            <h2>03</h2>
+            <div class="image-box"><img src="storage/img/3.png" alt="Image 1"></div>
+        </section>
     </section>
 </body>
 </html>
