ci: :construction: Page006 done

--- a/pages/page006/page006.html
+++ b/pages/page006/page006.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css">
-    <title>Document</title>
+    <title>THE eWatch</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header class="article">
+        <h1>THE eWatch with the newest microchip technology</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
+        <div class="buttons">
+            <button>Order now</button>
+            <button>Explore more</button>
+        </div>
+        <section class="icons">
+            <div class="icon-item">
+                <img src="storage/img/Icons1.png" alt="Icon 1">
+                <p>Lorem ipsum dolor amet</p>
+            </div>
+            <div class="icon-item">
+                <img src="storage/img/Icons2.png" alt="Icon 2">
+                <p>Lorem ipsum dolor amet</p>
+            </div>
+            <div class="icon-item">
+                <img src="storage/img/Icons3.png" alt="Icon 3">
+                <p>Lorem ipsum dolor amet</p>
+            </div>
+            <div class="icon-item">
+                <img src="storage/img/Icons4.png" alt="Icon 4">
+                <p>Lorem ipsum dolor amet</p>
+            </div>            
+        </section>
+    </header>
+    <section class="gallery">
+        <div class="image-box"><img src="storage/img/Image group.png" alt="Image 1"></div>
+    </section>
 </body>
 </html>
